# riscv-elf-lib

./: CMakeLists.txt  README.md
docs/: Doxyfile  architecture.md  notes.md
example/: CMakeLists.txt  read_elf.cpp
include/riscv_elf/: analyze.hpp  parse.hpp  riscv_elf.hpp  utils.hpp
src/: analyze.cpp  riscv_elf.cpp
test/: CMakeLists.txt  tests.cpp
test/data/: test.elf
